@@ -212,6 +212,19 @@ static inline word_t readTPIDRURW(void)
 #endif
 }
 
+static inline void writeTPIDRURO(word_t reg)
+{
+    asm volatile("mcr p15, 0, %0, c13, c0, 3" :: "r"(reg));
+}
+
+static inline word_t readTPIDRURO(void)
+{
+    word_t reg;
+    asm volatile("mrc p15, 0, %0, c13, c0, 3" : "=r"(reg));
+    return reg;
+}
+
+
 static inline void writeTPIDRPRW(word_t reg)
 {
     asm volatile("mcr p15, 0, %0, c13, c0, 4" :: "r"(reg));
@@ -229,12 +242,17 @@ static void arm_save_thread_id(tcb_t *thread)
 #ifndef CONFIG_KERNEL_GLOBALS_FRAME
     /* TPIDRURW is writeable from EL0 but not with globals frame. */
     setRegister(thread, TPIDRURW, readTPIDRURW());
+    /* This register is read only from userlevel, but could still be updated
+     * if the thread is running in a higher priveleged level with a VCPU attached.
+     */
+    setRegister(thread, TPIDRURO, readTPIDRURO());
 #endif /* CONFIG_KERNEL_GLOBALS_FRAME */
 }
 
 static void arm_load_thread_id(tcb_t *thread)
 {
     writeTPIDRURW(getRegister(thread, TPIDRURW));
+    writeTPIDRURO(getRegister(thread, TPIDRURO));
 }
 
 static inline word_t readMPIDR(void)
