@@ -25,6 +25,7 @@
         <member name="r7"/>
         <member name="r14"/>
         <member name="tpidrurw"/>
+        <member name="tpidruro"/>
     </struct>
     <interface name="seL4_ARM_PageDirectory" manual_name="Page Directory"
         cap_description="Capability to the page directory being operated on.">
